rancher-master/refrence-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-use-cert
  namespace: certificate-ns 
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: cilium-gateway
  to:
  - group: ""
    kind: Secret
