rancher-master/rancher-master-common-gateway-istio.yaml
---
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway
metadata:
  name: common-server-gateway-istio
  namespace: common-gateway 
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTPS
    port: 443
    name: common-server-gateway-istio
    tls:
      mode: Terminate
      certificateRefs:
        - name: rajesh-tls-cert
          namespace: certificate-ns 
          kind: Secret
    allowedRoutes:
      namespaces:
        from: All
