rancher-master/rancher-master-common-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway
metadata:
  name: rancher-server-gateway
  namespace: cilium-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTPS
    port: 443
    name: rancher-server-gateway
    tls:
      mode: Terminate
      certificateRefs:
        - name: rajesh-tls-cert
          namespace: cert-manager 
          kind: Secret
    allowedRoutes:
      namespaces:
        from: All
