rancher-master/rancher-master-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-route
  namespace: cattle-system
spec:
  hostnames:
  - "rancher.rajesh-kumar.in"
  parentRefs:
  - name: rancher-server-gateway 
    namespace: cilium-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher
      port: 80
